feat(qbo): wire OAuth 2.0 callback + API routes into console app
- Export finance schema (qboConnections, qboTokens, qboSyncRuns, qboReports)
  from @nzila/db/schema barrel  was already defined but not exported
- Add @nzila/qbo to console app dependencies
- GET  /api/qbo/connect      builds Intuit auth URL with CSRF state cookie
- GET  /api/qbo/callback     exchanges code, upserts connection + tokens in DB
- GET  /api/qbo/status       returns active connection info and token expiry
- DELETE /api/qbo/status     revokes tokens, marks connection inactive
- POST /api/qbo/sync         fetches QBO report (P&L, BS, GL...) + stores result
  with auto-refresh of access token
- Fix INTUIT_REDIRECT_URI to point to console port 3001 (/api/qbo/callback)

--- a/.env.example
+++ b/.env.example
@@ -51,4 +51,4 @@ INTUIT_APP_ID=
 INTUIT_CLIENT_ID=
 INTUIT_CLIENT_SECRET=
 INTUIT_ENVIRONMENT=sandbox          # sandbox | production
-INTUIT_REDIRECT_URI=http://localhost:3000/api/auth/qbo/callback
+INTUIT_REDIRECT_URI=http://localhost:3001/api/qbo/callback
