fix: close all GA-blocking enterprise-readiness gaps (REM-01 through REM-05) (#67)
* docs: enterprise-ready stress test — CONDITIONAL YES verdict with remediation plan

* fix: close all GA-blocking enterprise-readiness gaps (REM-01 through REM-05)

REM-01 — Rate limiting (HIGH FAIL):
  - Add packages/os-core/src/rateLimit.ts: sliding window rate limiter,
    Edge Runtime compatible, zero deps, auto-purges stale entries
  - Export checkRateLimit + rateLimitHeaders from os-core barrel
  - Wire rate limiting in apps/console and apps/partners middleware
    (120 req/60s per IP; 429 with RFC-compliant RateLimit-* headers)

REM-02 — Org isolation runtime tests (SOFT PASS → PASS):
  - Add tooling/contract-tests/org-isolation-runtime.test.ts
  - Static analysis: all non-public routes must have an org-boundary guard
  - Structural: authorizeEntityAccess exists in os-core, throws on missing ctx

REM-03 — Privilege escalation prevention tests (SOFT PASS → PASS):
  - Add tooling/contract-tests/privilege-escalation.test.ts
  - Validates role hierarchy: no lower role can inherit SUPER_ADMIN
  - Validates scopes: only SUPER_ADMIN has ADMIN_SYSTEM + ADMIN_USER_MANAGEMENT
  - Validates cross-domain: PartnerRole/UERole cannot inherit ConsoleRole

REM-04 — DATA_EXPORT audit action (FAIL → PASS):
  - Add DATA_EXPORT, DATA_EXPORT_REQUEST, AUTH_CONFIG_CHANGE,
    AUTHORIZATION_DENIED to AUDIT_ACTIONS in apps/console/lib/audit-db.ts
  - Wire AUDIT_ACTIONS.DATA_EXPORT in stripe/reports/generate route
    (replaces raw 'stripe.report_generated' string literal)
  - Add tooling/contract-tests/audit-taxonomy.test.ts

REM-05 — Health routes accessible without auth (SOFT PASS gap):
  - Add /api/health(.*) to isPublicRoute in both console + partners middleware
    (health routes existed but were blocked by auth; fixed)
  - Add tooling/contract-tests/health-routes.test.ts
  - Add tooling/contract-tests/rate-limiting.test.ts

Test suite: 35 files, 338 passed, 1 skipped (was 271/272 before remediati

--- a/packages/os-core/package.json
+++ b/packages/os-core/package.json
@@ -25,7 +25,8 @@
     "./telemetry": "./src/telemetry/index.ts",
     "./retention": "./src/retention/index.ts",
     "./config": "./src/config/env.ts",
-    "./secrets": "./src/secrets/keyvault.ts"
+    "./secrets": "./src/secrets/keyvault.ts",
+    "./rateLimit": "./src/rateLimit.ts"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
