fix: add pull-requests:read to Gitleaks workflow + waiver for CVE-2026-26996 (minimatch ReDoS, dev-only)

--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -32,6 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      pull-requests: read  # required for gitleaks-action@v2 PR scan mode
 
     steps:
       - uses: actions/checkout@v4
