refactor: migrate vitest to projects API with root orchestrator (#78)
* refactor: migrate vitest to projects API with root orchestrator

- Add root vitest.config.ts using defineConfig with projects array
- Convert all 13 per-package configs from defineConfig to defineProject
- Add unique name property to each project config
- Update root scripts: add test:all, use --project for contract-tests
- Add .vscode/settings.json SQL file association for PostgreSQL migrations

All 549 tests (45 files) pass across 13 projects.

* fix: add vitest configs for 5 packages without own config

orchestrator-api, union-eyes, blob, ml-core, and tax had no
vitest.config.ts, so running 'vitest run' inside them walked up to the
root config (which lists all projects), causing CI to fail.

Each now gets a minimal defineProject with passWithNoTests.
Root vitest.config.ts updated to include all 18 workspace projects.

* fix: remove passWithNoTests from defineProject configs

passWithNoTests is a CLI-only flag, not a valid ProjectConfig property.
Each package's test script already passes --passWithNoTests.

* fix: make Trivy CRITICAL CVEs PR-blocking + fix passWithNoTests in configs

Trivy container scan:
- Table output step now uses exit-code: 1 with severity: CRITICAL
- SARIF and filesystem scans remain informational (exit-code: 0)
- Critical container CVEs now fail PR checks

Vitest configs:
- Remove passWithNoTests from defineProject configs (not a valid
  ProjectConfig property, it's a CLI-only flag)
- Add --passWithNoTests to test scripts for partners, qbo, ml-sdk,
  ai-sdk (packages with no test files yet)

* fix: bump Node alpine base image for CVE-2025-15467 (OpenSSL RCE)

Trivy container scan now correctly blocks PRs on CRITICAL CVEs.
The Alpine 3.21.2 base image has libcrypto3/libssl3 3.3.2-r4 which is
affected by CVE-2025-15467 (Remote Code Execution via oversized
initialization). Fixed in OpenSSL 3.3.6-r0.

Bump to node:22-alpine (latest) to pull patched Alpine packages.

* fix: b

--- a/apps/orchestrator-api/Dockerfile
+++ b/apps/orchestrator-api/Dockerfile
@@ -1,7 +1,7 @@
 # Orchestrator API — lightweight Dockerfile
 # Uses tsx for TypeScript execution (no compile step)
 
-FROM node:22.13.1-alpine3.21 AS base
+FROM node:22-alpine AS base
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 RUN npm install -g pnpm@10.11.0 --ignore-scripts
