--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
     "test": "turbo test",
+    "test:all": "vitest run",
     "test:coverage": "turbo test:coverage",
-    "contract-tests": "vitest run --config tooling/contract-tests/vitest.config.ts",
+    "contract-tests": "vitest run --project contract-tests",
     "release": "changeset publish",
     "version-packages": "changeset version",
     "clean": "turbo clean",
