--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,12 @@
   },
   "chat.tools.terminal.autoApprove": {
     "npx vitest": true
-  }
+  },
+
+  // ── SQL ─────────────────────────────────────────────────
+  // Drizzle migrations are PostgreSQL — prevent MSSQL linter false positives
+  "files.associations": {
+    "packages/db/drizzle/**/*.sql": "sql"
+  },
+  "vitest.disableWorkspaceWarning": true
 }
