--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -24,6 +24,8 @@
     "@nzila/ui": "workspace:*",
     "@stripe/react-stripe-js": "^5.6.0",
     "@stripe/stripe-js": "^8.7.0",
+    "@types/dompurify": "^3.2.0",
+    "dompurify": "^3.3.1",
     "drizzle-orm": "^0.39.0",
     "gray-matter": "^4.0.3",
     "next": "16.1.6",
