--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
         with:
           version: 10.11.0
 
@@ -26,7 +26,7 @@ jobs:
           node-version: '22'
 
       - name: Generate CycloneDX SBOM
-        uses: CycloneDX/gh-node-module-generatebom@v1
+        uses: CycloneDX/gh-node-module-generatebom@27e13c2bf0fae78d66387b35ca9749d8cc853060 # v1.0.3
         with:
           path: ./
           output: sbom.json
@@ -40,7 +40,7 @@ jobs:
 
       - name: Attach SBOM to GitHub release
         if: github.event_name == 'release'
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1
         with:
           files: sbom.json
 
@@ -62,7 +62,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
         with:
           version: 10.11.0
 
