--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,8 @@
     "@heroicons/react": "^2.2.0",
     "@nzila/os-core": "workspace:*",
     "@nzila/ui": "workspace:*",
+    "@types/dompurify": "^3.2.0",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.0.0",
     "gray-matter": "^4.0.3",
     "next": "16.1.6",
