fix: CI green — lint configs, entityId convergence, REM-09 route, migration path, vuln waivers, red-team alignment
- Create eslint.config.mjs for cora, pondu, trade (fixes lint exit code 2)
- Rename entityId->subjectId across os-core, agri-traceability, abr, nacp-exams
- Convert require('node:crypto') to ESM import in abr/nacp-exams evidence-packs
- Add @deprecated JSDoc on entity-level orgId in commerce-core, zonga-core, trade-core, nacp-core
- Create apps/console/app/api/orgs/[orgId]/people/route.ts (REM-09 member management)
- Fix ci.yml: pnpm --filter @nzila/db db:migrate (was referencing deleted migrate.ts)
- Add 3 vulnerability waivers: 1113545, 1113553 (minimatch), 1113633 (serialize-javascript)
- Fix red-team tests: entityCol->orgCol, getEntityIdColumn->getOrgIdColumn alignment

--- a/apps/union-eyes/package.json
+++ b/apps/union-eyes/package.json
@@ -45,6 +45,7 @@
     "@nzila/ml-sdk": "workspace:*",
     "@nzila/os-core": "workspace:*",
     "@nzila/payments-stripe": "workspace:*",
+    "@nzila/ui": "workspace:*",
     "@paralleldrive/cuid2": "^3.3.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
